--- a/themes/fortify-hugo/layouts/index.html
+++ b/themes/fortify-hugo/layouts/index.html
@@ -162,7 +162,7 @@
                   class="md:col-6 lg:col-4"
                   data-aos="fade-up-sm"
                   data-aos-delay="0">
-                  <a href="/documentation/" class="block h-full">
+                  <a href="{{ .link }}" class="block h-full">
                     <div
                       class="h-full min-h-full rounded-xl bg-light px-6 py-12 text-center transition-all duration-300 ease-in-out md:rounded-3xl border-2 border-transparent hover:scale-[1.03] hover:border-primary">
                       <div
