--- a/themes/fortify-hugo/layouts/pro/list.html
+++ b/themes/fortify-hugo/layouts/pro/list.html
@@ -213,8 +213,8 @@
               <th scope="row" class="py-4 px-6 font-medium text-gray-900">
                 <a class="dashed-underline" href="{{ "documentation/pro/jobrunr-pro-dashboard/" | relURL }}">Dashboard Features</a></th>
               <td class="py-4 px-6 text-center bg-[#FAFAFA] text-gray-900">Simple Overview</td>
-              <td class="py-4 px-6 bg-black text-white">Enhanced Search, Filters, Labels, Observability Integration (Micrometer)</td>
-              <td class="py-4 px-6 bg-[#FAFAFA] text-gray-900">All Pro Business features + Dashboard SSO, GDPR/HIPAA Redaction</td>
+              <td class="py-4 px-6 bg-black text-white text-center">Enhanced Search, Filters, Labels, Observability Integration (Micrometer)</td>
+              <td class="py-4 px-6 bg-[#FAFAFA] text-gray-900 text-center">All Pro Business features + Dashboard SSO, GDPR/HIPAA Redaction</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
               <th scope="row" class="py-4 px-6 font-medium text-gray-900">
@@ -247,7 +247,7 @@
               <th scope="row" class="py-4 px-6 font-medium text-gray-900">Enterprise Hardened Releases</th>
               <td class="py-4 px-6 text-center bg-[#FAFAFA] text-gray-900">Standard</td>
               <td class="py-4 px-6 text-center bg-black text-white">Standard</td>
-              <td class="py-4 px-6 bg-[#FAFAFA] text-gray-900"><span class="table-check-icon"></span> (Stress-tested, benchmarked, external security auditing)</td>
+              <td class="py-4 px-6 bg-[#FAFAFA] text-gray-900 text-center"><span class="table-check-icon"></span><br/>Stress-tested, benchmarked, external security auditing</td>
             </tr>
             <tr class="bg-white border-b border-gray-100">
               <th scope="row" class="py-4 px-6 font-medium text-gray-900">
@@ -291,7 +291,7 @@
               <th scope="row" class="py-4 px-6 font-medium text-gray-900"></th>
               <td class="py-4 px-6 text-center bg-[#FAFAFA] text-gray-900"></td>
               <td class="py-4 px-6 text-center bg-black text-white"><a class="underline" target="_self" onclick="document.getElementById('trial-modal').classList.remove('hidden'); document.getElementById('modal-backdrop').classList.remove('hidden');" rel="noopener">Start your free trial</a></td>
-              <td class="py-4 px-6 text-center bg-[#FAFAFA] text-gray-900"><a class="underline" href="{{ "get-jobrunr-pro-enterprise" | absURL }}">Get In Touch </a></td>
+              <td class="py-4 px-6 text-center bg-[#FAFAFA] text-gray-900"><a class="underline" href="{{ "/en/get-jobrunr-pro-enterprise" }}">Get In Touch </a></td>
             </tr>
           </tbody>
         </table>
@@ -357,7 +357,8 @@
       'main a[href*="pro"]' +
       ':not([href*="get-jobrunr-pro"])' +
       ':not([href*="documentation/pro"])' +
-      ':not([href*="blog"])'
+      ':not([href*="blog"])'+
+      ':not([href*="case"])'
     );
     const modal = document.getElementById('trial-modal');
     const backdrop = document.getElementById('modal-backdrop');
